--- a/backend/day-28-30/src/templates/index.html
+++ b/backend/day-28-30/src/templates/index.html
@@ -2,6 +2,15 @@
 {% block title %} Accounts {% endblock %}
 {% block content %}
     <div class="container p-5">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-success" role="alert">
+                            {{message}}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <h1>Accounts</h1>
         <a href="/add">
             <button class="btn btn-primary">
